[package]
name = "traffiq"
description = "Traffiq is a simple utility which reads and writes data across network connections, using HTTP, TCP or UDP protocol."
version = "0.1.0"
edition = "2021"
authors = ["Sriram G. < marirs@gmail.com>"]


[lib]
name = "traffiq"
path = "src/lib.rs"

[[bin]]
name = "traffiq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
tokio = {version = "1.35.1", features = ["full"]}
thiserror = "1.0.52"
log = "0.4.20"
simple_logger = "4.3.3"
rustls-pemfile = "2.0.0"
futures = "0.3.30"
tokio-rustls = "0.23.4"
webpki-roots = "0.26.0"
