[package]
name = "traffiq"
description = "Traffiq is a simple utility which reads and writes data across network connections, using HTTP, TCP or UDP protocol."
version = "0.2.0"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/traffiq"
homepage = "https://github.com/marirs/traffiq"
keywords = ["traffiq", "netcat", "tcp", "udp", "http"]
edition = "2021"
authors = ["Sriram G. < marirs@gmail.com>"]


[lib]
name = "traffiq"
path = "src/lib.rs"

[[bin]]
name = "traffiq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
config = { version = "0.14.0", features = [] }
futures = "0.3.30"
log = "0.4.20"
openssl = { version = "0.10.63", features = ["vendored"] }
rocket = { version = "0.5.0", features = ["tls", "json", "secrets"] }
rustls-pemfile = "2.0.0"
serde = { version = "1.0.196", features = ["derive"]  }
simple_logger = "4.3.3"
thiserror = "1.0.57"
tokio = {version = "1.36.0", features = ["full"]}
tokio-rustls = "0.25.0"
webpki-roots = "0.26.1"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
panic = "abort"